# zero2prod

./: Cargo.toml  Dockerfile  configuration.toml  devenv.nix  docker-compose.yml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.toml  local.toml  production.toml
migrations/: 20230708102411_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscription_confirm.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscription.rs  subscription_confirm.rs
